--- a/style.css
+++ b/style.css
@@ -2,14 +2,21 @@
   font-family: "Open Sans", serif;
 }
 
-span{
-  line-height: 8px;
-}
-
 #page{
   width: 1120px;
   margin: auto;
   padding: 88px;
+}
+
+span{
+  font-weight: bold;
+}
+
+.paragraph{
+  font-style: italic;
+  color: #333333;
+  text-align: center;
+  font-size: 16px;
 }
 
 img{
@@ -28,6 +35,10 @@ h3{
   font-size: 16px;
   color: #E1624F;
   text-transform: uppercase;
+}
+
+.list-1, .list-2, .list-3{
+  margin-top: 64px;
 }
 
 #busan-image p{
